# OOP_task

./: CMakeLists.txt  README.md  main.cpp  tasks.cpp  tasks.h
doxy/html/: annotated.html  class_human-members.html  class_human.html  class_student-members.html  class_student.html  classes.html  dir_4d575b56f11f888f158a8a629a41b699.html  dir_abdd81427e39a44d7adb139fc066776f.html  files.html  hierarchy.html  tasks_8h_source.html
doxy/html/search/: all_1.js  classes_0.js  classes_1.js  searchdata.js
doxy/latex/: class_human.tex  class_student.tex  refman.tex
